Feat: Homepage URL

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://AdityaTiwari2102.github.io/super-fiesta",
   "name": "super-fiesta",
   "version": "0.1.0",
   "private": true,
